# llama_inference

./: .gitignore  CMakeLists.txt
src/kernels/: CMakeLists.txt  act_kernel.cu  act_kernel.h  build_casual_mask.h  concat_past_kv.cu  concat_past_kv.h  cublas_utils.cc  cublas_utils.h  fused_addresidual_norm.cu  fused_addresidual_norm.h  fused_transpose_and_remv_pad.cu  fused_transpose_and_remv_pad.h  input_embedding.cu  input_embedding.h  linear.cu  linear.h  repeat_kv.cu  repeat_kv.h  rms_norm.cu  rms_norm.h  sampling.cu
src/memory/: base_allocator.h  cuda_allocator.h
src/utils/: macro.h  string_utils.h  tensor.h  vectorize_utils.h
src/weights/: CMakeLists.txt  base_weights.h
src/weights/llama/: embedding_weights.h  rmsnorm_weights.h
test/: CMakeLIsts.txt
test/unitests/: test_input_embedding.cu
tests/unittests/: CMakeLists.txt  test_act.cu  test_concat_kv.cu  test_fused_addresidual_norm.cu  test_input_embedding.cu  test_linear.cu  test_rmsnorm.cu
